1. Fix some minor changes

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>IMX One Page Parallax Template</title>
+    <title>Hello, I'am Alvin</title>
 
     <meta charset="utf-8">
     <meta name="description"
@@ -66,11 +66,10 @@
                         <a class="scroll" href="#home">
                             <div>I'm
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                Janifer
-                                <span>Smith</span>
+                                Xinyao
+                                <span>Sun</span>
                             </div>
-
-                            <img src="assets/img/logo-f.png" alt="">
+                            <img src="assets/img/logo-real3.png" alt="">
                         </a>
                     </div>
                     <!-- col-md-6 end -->
@@ -78,11 +77,11 @@
 
                 <div class="bs-js-navbar-scrollspy pull-right">
                     <ul class="nav navbar-nav nav-effect">
-                        <li><a class="scroll" href="#about"><span data-hover="Intro">About Me</span></a></li>
+                        <li><a class="scroll" href="#about"><span data-hover="Intro">Intro</span></a></li>
                         <li><a class="scroll" href="#experience_academic"><span data-hover="Academic Research">Academic Research</span></a></li>
                         <li><a class="scroll" href="#experience_course"><span data-hover="Course Projects">Course Projects</span></a></li>
                         <li><a class="scroll" href="#experience"><span data-hover="Work Experience">Work Experience</span></a></li>
-                        <!--<li><a class="scroll" href="#question"><span data-hover="Contact">Contact</span></a></li>-->
+                        <li><a class="scroll" href="#question"><span data-hover="Contact">Contact</span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -187,11 +186,11 @@
                             <a class="scroll" href="#home">
                                 <div>I'm
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                    Xinyao(Alvin)
+                                    Xinyao
                                     <span>Sun</span>
                                 </div>
 
-                                <img src="assets/img/logo-real.png" style="height: 90%" alt="">
+                                <img src="assets/img/logo-real3.png" style="height: 90%" alt="">
                             </a>
                         </div>
                         <!-- col-md-6 end -->
@@ -199,11 +198,12 @@
 
                     <div class="collapse navbar-collapse bs-js-navbar-scrollspy pull-right">
                         <ul class="nav navbar-nav nav-effect">
-                            <li><a class="scroll" href="#about"><span data-hover="Intro">About Me</span></a></li>
+                            <li><a class="scroll" href="#about"><span data-hover="Intro">Intro</span></a></li>
                             <li><a class="scroll" href="#experience_academic"><span data-hover="Academic Research">Academic Research</span></a></li>
                             <li><a class="scroll" href="#experience_course"><span data-hover="Course Projects">Course Projects</span></a></li>
                             <li><a class="scroll" href="#experience"><span data-hover="Work Experience">Work Experience</span></a></li>
-                            <li class="getitbtn"><a class="scroll" href="#">GET MY CV</a></li>
+                            <li><a class="scroll" href="#question"><span data-hover="Contact">Contact</span></a></li>
+                            <li class="getitbtn"><a href="assets/files/cv.pdf">GET MY CV</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -235,7 +235,7 @@
             </div>
             <!-- col-md-6 end -->
             <div class="col-md-6" data-uk-scrollspy="{cls:'uk-animation-slide-bottom', delay: 1300, repeat: true}">
-                <h3>Xinyao Sun</h3>
+                <h3>Xinyao(Alvin) Sun</h3>
                 <h4>Research Assistant,Multimedia Research Group</h4>
                 <h4>Master Student, MSc with Specialization in Multimedia</h4>
                 <h4>Computing Science Department
@@ -1242,51 +1242,42 @@
 <!--</section> &lt;!&ndash; SUBSCRIBE END &ndash;&gt;-->
 
 
-<!--<section id="question">-->
-<!--<div class="questionOverlay">-->
-<!--<div class="question-inner-wrapper">-->
-<!--<div class="home-part">-->
-<!--<h2>Or Have a question?</h2>-->
-<!--<h3>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum <br> __________</h3>-->
+<section id="question">
+<div class="questionOverlay">
+<div class="question-inner-wrapper">
+<div class="home-part">
+<h2>Want to have a discussion? </h2>
+<h3><br> __________</h3>
 
-<!--<div class="contact-form-wrapper" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 1000, repeat: true}">-->
-<!--<form id="contact">-->
-<!--<input name="name" type="text" placeholder="YOUR NAME" required>-->
-<!-- -->
-<!--<input name="email" type="email" placeholder="EMAIL ADDRESS" required>-->
-<!-- -->
-<!--<input name="subject" class="message" type="text" placeholder="SUBJECT OF THIS MESSAGE" required>-->
-<!-- -->
-<!--<textarea name="message" placeholder="YOUR MESSAGE" required></textarea>-->
+<div class="contact-form-wrapper" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
+<form id="contact">
+<input name="name" type="text" placeholder="YOUR NAME" required>
 
-<!--<input type="submit" value="SUBMIT">-->
-<!--</form>-->
-<!--</div>-->
-<!--</div>        -->
-<!--</div>-->
-<!--</div>-->
-<!--</section> &lt;!&ndash; QUESTIONS END &ndash;&gt;-->
+<input name="email" type="email" placeholder="EMAIL ADDRESS" required>
+
+<input name="subject" class="message" type="text" placeholder="SUBJECT OF THIS MESSAGE" required>
+
+<textarea name="message" placeholder="YOUR MESSAGE" required></textarea>
+
+<input type="submit" value="SUBMIT">
+</form>
+</div>
+</div>
+</div>
+</div>
+</section> <!-- QUESTIONS END -->
 
 
 <footer id="footer">
     <div class="container">
         <ul id="footer-nav" class="pull-left">
-            <li>All works <span>&copy; Janifer Smith</span> 2014. All rights Reserved</li>
-            <li><a class="hl" href="#">Terms of Use </a></li>
-            <li><a class="hl" href="#">Privacy Policy </a></li>
+            <li>All works <span>&copy; Xinyao(Alvin) Sun</span> 2016. All rights Reserved</li>
         </ul>
 
         <ul class="socialbtn pull-right">
-            <li><a class="icon-facebook" href="#"></a></li>
-            <li><a class="icon-twitter" href="#"></a></li>
-            <li><a class="icon-googleplus" href="#"></a></li>
-            <li><a class="icon-pinterest" href="#"></a></li>
-            <li><a class="icon-linkedin" href="#"></a></li>
-            <li><a class="icon-github" href="#"></a></li>
-            <li><a class="icon-dribbble" href="#"></a></li>
-            <li><a class="icon-instagram" href="#"></a></li>
-            <li><a class="icon-flickr" href="#"></a></li>
-            <li><a class="icon-uniE600" href="#"></a></li>
+            <li><a class="icon-facebook" href="https://www.facebook.com/alvin.sun.92"></a></li>
+            <li><a class="icon-github" href="https://github.com/Lucklyric"></a></li>
+            <li><a class="icon-googleplus" href="https://plus.google.com/u/0/103796235624834232117"></a></li>
         </ul>
     </div>
 </footer>
