--- a/pages/index.html
+++ b/pages/index.html
@@ -223,7 +223,7 @@
 
             <div class="col-md-6 promo" style="margin-top: 5%"
                  data-uk-scrollspy="{cls:'uk-animation-slide-bottom', delay: 500, repeat: true}">
-                <a class="popup-vimeo" href="assets/videos/v1.mp4" data-effect="mfp-3d-unfold">
+                <a class="popup-vimeo" href="https://youtu.be/T701osg-Iig" data-effect="mfp-3d-unfold">
                     <div class="promobox">
                         <img class="img-responsive" src="assets/img/promo_v1.png" alt="">
 
