--- a/pages/index.html
+++ b/pages/index.html
@@ -458,7 +458,7 @@
             <div class="item">
                 <h4>Bachelor of Science with Specialization in Computing Science</h4>
                 <h4><span>University of Alberta</span></h4>
-                <h5>January 2010 - April 2015 (Expected)</h5>
+                <h5>January 2010 - April 2015</h5>
             </div>
             <!-- ITEM END -->
 
