--- a/pages/index.html
+++ b/pages/index.html
@@ -203,7 +203,7 @@
                             <li><a class="scroll" href="#experience_course"><span data-hover="Course Projects">Course Projects</span></a></li>
                             <li><a class="scroll" href="#experience"><span data-hover="Work Experience">Work Experience</span></a></li>
                             <li><a class="scroll" href="#question"><span data-hover="Contact">Contact</span></a></li>
-                            <li class="getitbtn"><a href="assets/files/cv.pdf">GET MY CV</a></li>
+                            <!--<li class="getitbtn"><a href="assets/files/cv.pdf">GET MY CV</a></li>-->
                         </ul>
                     </div>
                 </nav>
